--- a/guide/refs.bib
+++ b/guide/refs.bib
@@ -1,5 +1,316 @@
-%% Created using Papers on Sun, 13 Aug 2017.
+%% Created using Papers on Tue, 23 Jan 2018.
 %% http://papersapp.com/papers/
+
+@article{Shannon:1948wk,
+author = {Shannon, Claude Elwood},
+title = {{A Mathematical Theory of Communication}},
+journal = {The Bell System Technical Journal},
+year = {1948},
+volume = {27},
+pages = {379--423},
+month = jul
+}
+
+@article{Daniels:2017cq,
+author = {Daniels, Bryan C and Krakauer, David C and Flack, Jessica C},
+title = {{Control of finite critical behaviour in a small-scale social system}},
+journal = {Nat Comms},
+year = {2017},
+volume = {8},
+pages = {14301--8},
+month = feb
+}
+
+@booklet{Anonymous:mVL3xTtr,
+title = {{Information Criteria and Statistical Modeling}},
+author = {Konishi, Sadanori and Kitagawa, Genshiro},
+howpublished = {Springer New York},
+address = {New York, NY},
+year = {2008}
+}
+
+@article{Bialek:2012cs,
+author = {Bialek, William and Cavagna, Andrea and Giardina, Irene and Mora, Thierry and Silvestri, Edmondo and Viale, Massimiliano and Walczak, Aleksandra M},
+title = {{Statistical mechanics for natural flocks of birds}},
+journal = {PNAS},
+year = {2012},
+volume = {109},
+number = {13},
+pages = {4786--4791}
+}
+
+@article{Monasson:2011fo,
+author = {Cocco, S and Monasson, R},
+title = {{Adaptive Cluster Expansion for Inferring Boltzmann Machines with Noisy Data}},
+journal = {Physical Review Letters},
+year = {2011},
+volume = {106},
+number = {9},
+pages = {090601},
+month = mar
+}
+
+@article{Ranganathan:2007wz,
+author = {Bialek, William and Ranganathan, Rama},
+title = {{Rediscovering the power of pairwise interactions}},
+journal = {arXiv},
+year = {2007},
+eprint = {0712.4397v1},
+eprinttype = {arxiv},
+eprintclass = {q-bio.QM},
+pages = {1--8},
+month = dec
+}
+
+@phdthesis{Ising:1924vf,
+author = {Ising, E},
+title = {{Beitrag zur Theorie des Ferromagnetismus}},
+year = {1924},
+month = dec
+}
+
+@book{Bretthorst:2003ua,
+author = {Jaynes, E T},
+editor = {Bretthorst, G L},
+title = {{Probability Theory: The Logic of Science}},
+publisher = {Cambridge University Press},
+year = {2003}
+}
+
+@book{Newman:1999wu,
+author = {Newman, M E J and Barkema, G T},
+title = {{Monte Carlo Methods in Statistical Physics}},
+publisher = {Clarendon Press},
+year = {1999},
+month = feb
+}
+
+@article{Stephens:2010hi,
+author = {Stephens, Greg J and Bialek, William},
+title = {{Statistical mechanics of letters in words}},
+journal = {Phys. Rev. E},
+year = {2010},
+volume = {81},
+number = {6},
+pages = {066119},
+month = jun
+}
+
+@inproceedings{Weigt:2009ba,
+author = {Weigt, M and White, R A and Szurmant, H},
+title = {{Identification of direct residue contacts in protein{\textendash}protein interaction by message passing}},
+booktitle = {Proceedings of the {\ldots}},
+year = {2009}
+}
+
+@booklet{MacKay:2005wc,
+title = {{Information Theory, Inference and Learning Algorithms}},
+author = {MacKay, David J C},
+month = sep,
+year = {2005}
+}
+
+@article{Nemenman:2016kl,
+author = {Merchan, Lina and Nemenman, Ilya},
+title = {{On the Sufficiency of Pairwise Interactions in Maximum Entropy Models of Networks}},
+journal = {J Stat Phys},
+year = {2016},
+volume = {162},
+number = {5},
+pages = {1294--1308},
+month = feb
+}
+
+@article{Castellano:2009ce,
+author = {Castellano, Claudio and Fortunato, Santo and Loreto, Vittorio},
+title = {{Statistical physics of social dynamics}},
+journal = {Rev. Mod. Phys.},
+year = {2009},
+volume = {81},
+number = {2},
+pages = {591--646},
+month = may
+}
+
+@article{Shemesh:2013dd,
+author = {Shemesh, Yair and Sztainberg, Yehezkel and Forkosh, Oren and Shlapobersky, Tamar and Chen, Alon and Schneidman, Elad},
+title = {{High-order social interactions in groups of mice}},
+journal = {eLife Sciences},
+year = {2013},
+volume = {2},
+pages = {e00759},
+month = sep
+}
+
+@article{Lee:2015ev,
+author = {Lee, Edward D and Broedersz, Chase P and Bialek, William},
+title = {{Statistical Mechanics of the US Supreme Court}},
+journal = {J Stat Phys},
+year = {2015},
+pages = {1--27},
+month = apr
+}
+
+@article{Schneidman:2006he,
+author = {Schneidman, E and Berry, M J and {RS II} and Bialek, W},
+title = {{Weak pairwise correlations imply strongly correlated network states in a neural population}},
+journal = {Nature},
+year = {2006}
+}
+
+@article{Nemenman:2004wz,
+author = {Nemenman, Ilya},
+title = {{Information theory, multivariate dependence, and genetic network inference}},
+journal = {arXiv},
+year = {2004},
+eprint = {CA9E4D1E-54BD-4A66-8095-6749D1E5F141},
+eprinttype = {scholar}
+}
+
+@book{Reif:2009uf,
+author = {Reif, F},
+title = {{Fundamentals of Statistical and Thermal Physics}},
+publisher = {Waveland Press},
+year = {2009}
+}
+
+@article{Sohl-Dickstein:2009tt,
+author = {Sohl-Dickstein, Jascha and Battaglino, Peter and DeWeese, Michael R},
+title = {{Minimum Probability Flow Learning}},
+journal = {arXiv},
+year = {2009},
+eprint = {0906.4779v4},
+eprinttype = {arxiv},
+eprintclass = {cs.LG},
+month = jun
+}
+
+@book{Bialek:2012ueb,
+author = {Bialek, W S},
+title = {{Biophysics: Searching for Principles}},
+publisher = {Princeton University Press},
+year = {2012}
+}
+
+@inproceedings{Lezon:2006ws,
+author = {Lezon, T R and Banavar, J R and Cieplak, M},
+title = {{Using the principle of entropy maximization to infer genetic interaction networks from gene expression patterns}},
+booktitle = {Proceedings of the {\ldots}},
+year = {2006}
+}
+
+@article{Nguyen:2017ww,
+author = {Nguyen, H Chau and Zecchina, Riccardo and Berg, Johannes},
+title = {{Inverse statistical problems: from the inverse Ising problem to data science}},
+journal = {arXiv},
+year = {2017},
+eprint = {1702.01522v3},
+eprinttype = {arxiv},
+eprintclass = {cond-mat.dis-nn},
+month = feb
+}
+
+@article{Ganmor:2011ct,
+author = {Ganmor, Elad and Segev, Ronen and Schneidman, Elad},
+title = {{Sparse low-order interaction network underlies a highly correlated and learnable neural population code}},
+journal = {PNAS},
+year = {2011},
+volume = {108},
+number = {23},
+pages = {9679--9684}
+}
+
+@book{Anonymous:P7M0DP7U,
+author = {M{\'e}zard, Marc and Montanari, Andrea},
+title = {{Information, Physics, and Computation}},
+publisher = {Oxford University Press},
+year = {2009},
+month = jan
+}
+
+@article{Broderick:2007wq,
+author = {Broderick, Tamara and Dudik, Miroslav and Tka{\v c}ik, Ga{\v s}per and Schapire, Robert E and Bialek, William},
+title = {{Faster solutions of the inverse pairwise Ising problem}},
+journal = {arXiv},
+year = {2007},
+pages = {1--8},
+month = dec
+}
+
+@article{Mora:2010jxa,
+author = {Mora, Thierry and Walczak, Aleksandra M and Bialek, William and Curtis G Callan, Jr},
+title = {{Maximum entropy models for antibody diversity}},
+journal = {PNAS},
+year = {2010},
+volume = {107},
+number = {12},
+pages = {5405--5410},
+month = mar
+}
+
+@book{Cover:2006tl,
+author = {Cover, Thomas M and Thomas, Joy A},
+title = {{Elements of Information Theory}},
+publisher = {John Wiley {\&} Sons},
+year = {2006},
+address = {Hoboken},
+edition = {2nd}
+}
+
+@article{Hyvarinen:2007ed,
+author = {Hyv{\"a}rinen, Aapo},
+title = {{Some extensions of score matching}},
+journal = {Computational Statistics {\&} Data Analysis},
+year = {2007},
+volume = {51},
+number = {5},
+pages = {2499--2512},
+month = feb
+}
+
+@article{Jaynes:1957fy,
+author = {Jaynes, E T},
+title = {{Information Theory and Statistical Mechanics}},
+journal = {Phys. Rev.},
+year = {1957},
+volume = {106},
+number = {4},
+pages = {620},
+month = may
+}
+
+@article{Tkacik:2006vq,
+author = {Tka{\v c}ik, Ga{\v s}per and Schneidman, Elad and Berry II, Michael J and Bialek, William},
+title = {{Ising models for networks of real neurons}},
+journal = {arXiv},
+year = {2006},
+month = nov
+}
+
+@article{SohlDickstein:2011im,
+author = {Sohl-Dickstein, Jascha and Battaglino, Peter B and DeWeese, Michael R},
+title = {{New Method for Parameter Estimation in Probabilistic Models: Minimum Probability Flow}},
+journal = {Physical Review Letters},
+year = {2011},
+volume = {107},
+number = {22},
+pages = {220601},
+month = nov
+}
+
+@article{Aurell:2012hi,
+author = {Aurell, Erik and Ekeberg, Magnus},
+title = {{Inverse Ising Inference Using All the Data}},
+journal = {Physical Review Letters},
+year = {2012},
+volume = {108},
+number = {9},
+pages = {090201},
+month = mar,
+annote = {Scales with data size because need to evaluate pseudolikelihood term for each data point
+
+Exact in the limit of infinite data if we assume the stationary point is unique (is it obviously unique?)}
+}
 
 @article{BarCoc13,
 Author = {Barton, John and Cocco, Simona},
@@ -32,182 +343,4 @@ Pages = {1--57},
 Title = {{Adaptive cluster expansion for the inverse Ising problem: convergence, algorithm and tests}},
 Year = {2012}}
 
-@article{Schneidman:2006he,
-author = {Schneidman, E and Berry, M J and {RS II} and Bialek, W},
-title = {{Weak pairwise correlations imply strongly correlated network states in a neural population}},
-journal = {Nature},
-year = {2006}
-}
-
-@book{Cover:2006tl,
-author = {Cover, Thomas M and Thomas, Joy A},
-title = {{Elements of Information Theory}},
-year = {2006}
-}
-
-@article{Monasson:2011fo,
-author = {Cocco, S and Monasson, R},
-title = {{Adaptive Cluster Expansion for Inferring Boltzmann Machines with Noisy Data}},
-journal = {Physical Review Letters},
-year = {2011},
-volume = {106},
-number = {9},
-pages = {090601},
-month = mar
-}
-
-@booklet{MacKay:2005wc,
-title = {{Information Theory, Inference and Learning Algorithms}},
-author = {MacKay, David J C},
-month = sep,
-year = {2005}
-}
-
-@book{Anonymous:P7M0DP7U,
-author = {M{\'e}zard, Marc and Montanari, Andrea},
-title = {{Information, Physics, and Computation}},
-publisher = {Oxford University Press},
-year = {2009},
-month = jan
-}
-
-@article{SohlDickstein:2011im,
-author = {Sohl-Dickstein, Jascha and Battaglino, Peter B and DeWeese, Michael R},
-title = {{New Method for Parameter Estimation in Probabilistic Models: Minimum Probability Flow}},
-journal = {Physical Review Letters},
-year = {2011},
-volume = {107},
-number = {22},
-pages = {220601},
-month = nov
-}
-
-@article{Lee:2015ev,
-author = {Lee, Edward D and Broedersz, Chase P and Bialek, William},
-title = {{Statistical Mechanics of the US Supreme Court}},
-journal = {J Stat Phys},
-year = {2015},
-pages = {1--27},
-month = apr
-}
-
-@inproceedings{Lezon:2006ws,
-author = {Lezon, T R and Banavar, J R and Cieplak, M},
-title = {{Using the principle of entropy maximization to infer genetic interaction networks from gene expression patterns}},
-booktitle = {Proceedings of the {\ldots}},
-year = {2006}
-}
-
-@book{Bretthorst:2003ua,
-author = {Jaynes, E T},
-editor = {Bretthorst, G L},
-title = {{Probability Theory: The Logic of Science}},
-publisher = {Cambridge University Press},
-year = {2003}
-}
-
-@article{Broderick:2007wq,
-author = {Broderick, Tamara and Dudik, Miroslav and Tka{\v c}ik, Ga{\v s}per and Schapire, Robert E and Bialek, William},
-title = {{Faster solutions of the inverse pairwise Ising problem}},
-journal = {arXiv},
-year = {2007},
-pages = {1--8},
-month = dec
-}
-
-@inproceedings{Weigt:2009ba,
-author = {Weigt, M and White, R A and Szurmant, H},
-title = {{Identification of direct residue contacts in protein{\textendash}protein interaction by message passing}},
-booktitle = {Proceedings of the {\ldots}},
-year = {2009}
-}
-
-@article{Hyvarinen:2007ed,
-author = {Hyv{\"a}rinen, Aapo},
-title = {{Some extensions of score matching}},
-journal = {Computational Statistics {\&} Data Analysis},
-year = {2007},
-volume = {51},
-number = {5},
-pages = {2499--2512},
-month = feb
-}
-
-@article{Nguyen:2017ww,
-author = {Nguyen, H Chau and Zecchina, Riccardo and Berg, Johannes},
-title = {{Inverse statistical problems: from the inverse Ising problem to data science}},
-journal = {arXiv},
-year = {2017},
-eprint = {1702.01522v3},
-eprinttype = {arxiv},
-eprintclass = {cond-mat.dis-nn},
-month = feb
-}
-
-@article{Stephens:2010hi,
-author = {Stephens, Greg J and Bialek, William},
-title = {{Statistical mechanics of letters in words}},
-journal = {Phys. Rev. E},
-year = {2010},
-volume = {81},
-number = {6},
-pages = {066119},
-month = jun
-}
-
-@article{Aurell:2012hi,
-author = {Aurell, Erik and Ekeberg, Magnus},
-title = {{Inverse Ising Inference Using All the Data}},
-journal = {Physical Review Letters},
-year = {2012},
-volume = {108},
-number = {9},
-pages = {090201},
-month = mar,
-annote = {Scales with data size because need to evaluate pseudolikelihood term for each data point
-
-Exact in the limit of infinite data if we assume the stationary point is unique (is it obviously unique?)}
-}
-
-@article{Jaynes:1957fy,
-author = {Jaynes, E T},
-title = {{Information Theory and Statistical Mechanics}},
-journal = {Phys. Rev.},
-year = {1957},
-volume = {106},
-number = {4},
-pages = {620},
-month = may
-}
-
-@article{Castellano:2009ce,
-author = {Castellano, Claudio and Fortunato, Santo and Loreto, Vittorio},
-title = {{Statistical physics of social dynamics}},
-journal = {Rev. Mod. Phys.},
-year = {2009},
-volume = {81},
-number = {2},
-pages = {591--646},
-month = may
-}
-
-@article{Bialek:2012cs,
-author = {Bialek, William and Cavagna, Andrea and Giardina, Irene and Mora, Thierry and Silvestri, Edmondo and Viale, Massimiliano and Walczak, Aleksandra M},
-title = {{Statistical mechanics for natural flocks of birds}},
-journal = {PNAS},
-year = {2012},
-volume = {109},
-number = {13},
-pages = {4786--4791}
-}
-
-@article{Shannon:1948wk,
-author = {Shannon, Claude Elwood},
-title = {{A Mathematical Theory of Communication}},
-journal = {The Bell System Technical Journal},
-year = {1948},
-volume = {27},
-pages = {379--423},
-month = jul
-}
 
